fixing display feedback button alignment

--- a/resources/styles/components/task-plan/homework/exercises.less
+++ b/resources/styles/components/task-plan/homework/exercises.less
@@ -67,7 +67,7 @@ label.exercises-section-label {
   text-align: center;
   margin: 10px auto;
 
-  .panel { margin: 10px auto; }
+  .panel { margin: 10px auto @tutor-card-body-padding-vertical; }
 
   .panel-heading {
     text-align: left;
@@ -95,6 +95,10 @@ label.exercises-section-label {
     .stem {
       margin-top: 50px;
     }
+  }
+  .exercise-wrapper {
+    max-width: 1200px;
+    margin: 10px auto;
   }
 }
 
